--- a/omnia/templates/requisition_detail.html
+++ b/omnia/templates/requisition_detail.html
@@ -39,11 +39,13 @@
                 <h6>Items</h6>
                 <table>
                     <thead>
-                        <th>Item ID.</th>
+                        <th>ID.</th>
                         <th>Name</th>
-                        <th>Description</th>
+                        <th>Item Type</th>
+                        <th>Specification</th>
                         <th>Quantity</th>
                         <th>Unit Price</th>
+                        <th>Vendor</th>
                     </thead>
                     <tbody id="req-items">
                     </tbody>
