--- a/omnia/templates/menu.html
+++ b/omnia/templates/menu.html
@@ -5,7 +5,7 @@
             <li><a href="/requisition">Create Requisition</a></li>
             <li><a href="/requisition/all">View Requisitions</a></li>
             <li><a href="/requisition/approve">Approve Requisitions</a></li>
-            <li><a href="#">Generate Order</a></li>
+            <li><a href="#">Create Purchase Order</a></li>
             <li><a href="#">Receive Goods</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
