--- a/omnia/templates/base.html
+++ b/omnia/templates/base.html
@@ -13,7 +13,10 @@
         <link rel="stylesheet" type="text/css" media="all" href="/css/main.css"/>
         <script type="text/javascript" src="/js/jquery.js"></script>
         <script type="text/javascript" src="/js/jquery.validate.js"></script>
+
         <script type="text/javascript" src="/js/main.js"></script>
+        <script type="text/javascript" src="/js/ajaxget.js"></script>
+        <script type="text/javascript" src="/js/ajaxpost.js"></script>
 
         ${self.custom_js()}
     </head>
