--- a/omnia/templates/dashboard.html
+++ b/omnia/templates/dashboard.html
@@ -23,4 +23,7 @@
 <%def name="page_content()">
     ${self.menu()}
     ${self.activity()}
+    <div id="footer" class="grid_16 alpha omega">
+        <p>&copy;2009. OmniaWorks. All rights reserved.</p>
+    </div>
 </%def>
