--- a/omnia/templates/all_requisitions.html
+++ b/omnia/templates/all_requisitions.html
@@ -7,7 +7,7 @@
     <script>
         $(function()    {
             var obj = new AjaxGet();
-            obj.get("/requisition/get_all");
+            obj.get("/requisition/get");
         });
 
     </script>
@@ -38,9 +38,4 @@
             </div>
         </div>
     </div>
-</%def>
-
-<%def name="page_content()">
-    ${self.menu()} 
-    ${self.activity()}
 </%def>
