--- a/omnia/templates/menu.html
+++ b/omnia/templates/menu.html
@@ -2,10 +2,11 @@
     <div class="widget">
         <ul>
             <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/requisition">Create Requisition</a></li>
-            <li><a href="/requisition/all">View Requisitions</a></li>
+            <li><a href="/requisition/create">Create Requisition</a></li>
+            <li><a href="/requisition">View Requisitions</a></li>
             <li><a href="/requisition/approve">Approve Requisitions</a></li>
-            <li><a href="/purchase_order">Create Purchase Order</a></li>
+            <li><a href="/purchase_order/create">Create Purchase Order</a></li>
+            <li><a href="/purchase_order">View Purchase Orders</a></li>
             <li><a href="#">Receive Goods</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
