--- a/omnia/templates/requisition_detail.html
+++ b/omnia/templates/requisition_detail.html
@@ -44,6 +44,7 @@
                         <th>Specification</th>
                         <th>Quantity</th>
                         <th>Unit Price</th>
+                        <th>Total Price</th>
                     </thead>
                     <tbody id="req-items">
                     </tbody>
