--- a/omnia/templates/edit_purchase_order.html
+++ b/omnia/templates/edit_purchase_order.html
@@ -1,61 +1,8 @@
-<%inherit file="dashboard.html"/>
+<%def name="actionlinks()">
+    <li><a href="/purchase_order/${c.po_id}/add_line_item">Add Item</a></li>
+    <li><a href="/purchase_order/${c.po_id}/view">Preview</a></li>
+</%def>
 
 <%def name="title()">Edit Purchase Order</%def>
 
-<%def name="custom_js()">
-    <script src="/js/purchase_order.js"></script>
-    <script>
-        $(function(){
-            $("#purchase-order").show();
-            var obj = new AjaxGet();
-            obj.get("/purchase_order/${c.po_id}/get_by_id");
-        });
-    </script>
-</%def>
-
-<%def name="menu()">
-    <%include file="menu.html"/>
-</%def>
-
-<%def name="activity()">
-    <div class="grid_12 omega">
-        <div class="widget">
-            <div id="purchase-order">
-                <h4>Purchase Order</h4>
-                <div id="po">
-                    <ul>
-                        <li>Purchase Order No. <span id="id"></span></li>
-                        <li>Date <span id="date"></span></li>
-                        <li><a href="">Add Item</a>
-                        <li><a href="">Preview</a>
-                    </ul>
-                </div>
-                <div id="line-items">
-                    <table>
-                        <thead>
-                            <th>Item No.</th>
-                            <th>Name</th>
-                            <th>Specification</th>
-                            <th>Quantity</th>
-                            <th>Unit Price</th>
-                            <th>Total Price</th>
-                            <th></th>
-                        </thead>
-                        <tbody id="po-items">
-                        </tbody>
-                    </table>
-                    <ul>
-                        <li>Total Price <span id="amount"></span></li>
-                    </ul>
-                </div>
-                <div id="vendor">
-                    <ul>
-                        <li>Name of Vendor <span id="name"></span></li>
-                        <li>Address <span id="address"></span></li>
-                        <li>Phone Number <span id="phone"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</%def>
+<%inherit file="purchase_order.html"/>
