--- a/omnia/templates/menu.html
+++ b/omnia/templates/menu.html
@@ -1,13 +1,18 @@
 <div class="grid_4 alpha">
     <div class="widget">
         <ul>
-            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/dashboard">Dashboard</a></li><br/>
+            <li><span>Requisition</span></li>
             <li><a href="/requisition/create">Create Requisition</a></li>
             <li><a href="/requisition">View Requisitions</a></li>
-            <li><a href="/requisition/approve">Approve Requisitions</a></li>
+            <li><a href="/requisition/approve">Approve Requisitions</a></li><br/>
+            <li><span>Purchase Order<span></li>
             <li><a href="/purchase_order/create">Create Purchase Order</a></li>
-            <li><a href="/purchase_order">View Purchase Orders</a></li>
-            <li><a href="#">Receive Goods</a></li>
+            <li><a href="/purchase_order">View Purchase Orders</a></li><br/>
+            <li><span>Invoice</span></li>
+            <li><a href="#">View Invoices</a></li><br/>
+            <li><span>Delivery</span></li>
+            <li><a href="#">Receive Goods</a></li><br/>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
