Style .widget ul li span for menu headers ajaxget.js ========== Remove condition 'vendor_object' po_object already contains vendor object so no need to call any url from condition 'po_object' Add condition 'po_list' purchase_order.js ================= Call createPO() with user_id Add link url to "#po a" before showing PO Remove url call from populatePO(), po object already contains vendor object new function displayPOs()

--- a/omnia/public/css/main.css
+++ b/omnia/public/css/main.css
@@ -91,6 +91,10 @@ ul li   {
     line-height: 1.5em;
 }
 
+.widget ul li span  {
+    font-weight: bold;
+}
+
 .horiz-nav   {
     font-size: 13px;
     font-weight: normal;
