New Invoice functionality Plenty of stuff here baby!

--- a/omnia/templates/add_line_item.html
+++ b/omnia/templates/add_line_item.html
@@ -1,6 +1,6 @@
 <%inherit file="dashboard.html"/>
 
-<%def name="title()">Add Item To Requisition</%def>
+<%def name="title()">Add Line Item To Requisition</%def>
 
 <%def name="custom_js()">
     <script src="/js/req.js"></script>
