--- a/omnia/templates/add_po_line_item.html
+++ b/omnia/templates/add_po_line_item.html
@@ -1,6 +1,6 @@
 <%inherit file="dashboard.html"/>
 
-<%def name="title()">Add Line Item</%def>
+<%def name="title()">Add Line Item To Purchase Order</%def>
 
 <%def name="custom_js()">
     <script src="/js/purchase_order.js"></script>
