--- a/omnia/templates/menu.html
+++ b/omnia/templates/menu.html
@@ -9,8 +9,8 @@
             <li><span>Purchase Order<span></li>
             <li><a href="/purchase_order/create">Create Purchase Order</a></li>
             <li><a href="/purchase_order">View Purchase Orders</a></li><br/>
-            <li><span>Invoice</span></li>
-            <li><a href="#">View Invoices</a></li><br/>
+            <!--<li><span>Invoice</span></li>
+            <li><a href="#">View Invoices</a></li><br/>-->
             <li><span>Delivery</span></li>
             <li><a href="#">Receive Goods</a></li><br/>
             <li><a href="/logout">Logout</a></li>
