--- a/omnia/public/css/main.css
+++ b/omnia/public/css/main.css
@@ -7,6 +7,7 @@
 @import url("auth.css");
 @import url("req.css");
 @import url("purchase_order.css");
+@import url("invoice.css");
 
 body    {
     color: #333;    
