--- a/omnia/templates/edit_purchase_order.html
+++ b/omnia/templates/edit_purchase_order.html
@@ -1,13 +1,13 @@
-<%def name="actionlinks()">
+<%def name="actionlinks()"><!--{{{-->
     <li><a href="/purchase_order/${c.po_id}/add_line_item">Add Item</a></li>
     <li><a href="/purchase_order/${c.po_id}/view">Preview</a></li>
-</%def>
+</%def><!--}}}-->
 
 <%def name="title()">Edit Purchase Order</%def>
 
 <%def name="task()"></%def>
 
-<%def name="view()">
+<%def name="view()"><!--{{{-->
     <div id="purchase-order">
         <h4>Purchase Order</h4>
         <div id="po">
@@ -26,7 +26,7 @@
                     <th>Quantity</th>
                     <th>Unit Price</th>
                     <th>Total Price</th>
-                    <th></th>
+                    <th>&nbsp;</th>
                 </thead>
                 <tbody id="po-items">
                 </tbody>
@@ -43,15 +43,18 @@
             </ul>
         </div>
     </div>
-</%def>
+</%def><!--}}}-->
 
-<%def name="container()">
+<%def name="extra_actions()"></%def>
+
+<%def name="container()"><!--{{{-->
     <div class="grid_12 omega">
         <div class="widget">
             ${self.task()}   
             ${self.view()}
         </div>
+        ${self.extra_actions()}
     </div>
-</%def>
+</%def><!--}}}-->
 
 <%inherit file="purchase_order.html"/>
