--- a/omnia/templates/dashboard.html
+++ b/omnia/templates/dashboard.html
@@ -13,7 +13,7 @@
         <div class="widget">
             <h4>Dashboard</h4>
             <p>
-                Welcome <b>${session['user'].firstname} ${session['user'].lastname}</b><br/><br/>
+                Welcome <b>${session['user'].firstname} ${session['user'].lastname}</b>
             </p>
         </div>
     </div>
