--- a/omnia/templates/menu.html
+++ b/omnia/templates/menu.html
@@ -12,7 +12,7 @@
             <!--<li><span>Invoice</span></li>
             <li><a href="#">View Invoices</a></li><br/>-->
             <li><span>Delivery</span></li>
-            <li><a href="#">Receive Goods</a></li><br/>
+            <li><a href="/receiving">Receive Items</a></li><br/>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
