--- a/omnia/public/css/main.css
+++ b/omnia/public/css/main.css
@@ -72,6 +72,12 @@ ul li   {
     border-bottom-width: 2px;
 }
 
+.widget h4 a {
+    font-weight: normal; 
+    font-size: 70%;
+    margin-left: 40em;
+}
+
 .widget h6 {
     border-bottom: solid 1px #d3d3d3;
     margin: 0;
