Close PO functionality

--- a/omnia/templates/edit_purchase_order.html
+++ b/omnia/templates/edit_purchase_order.html
@@ -1,6 +1,6 @@
 <%def name="actionlinks()"><!--{{{-->
-    <li><a href="/purchase_order/${c.po_id}/add_line_item">Add Item</a></li>
-    <li><a href="/purchase_order/${c.po_id}/view">Preview</a></li>
+    <li><a id="add-line-item" href="/purchase_order/${c.po_id}/add_line_item">Add Item</a></li>
+    <li><a id="view-PO" href="/purchase_order/${c.po_id}/view">Preview</a></li>
 </%def><!--}}}-->
 
 <%def name="title()">Edit Purchase Order</%def>
