--- a/omnia/templates/base.html
+++ b/omnia/templates/base.html
@@ -8,7 +8,7 @@
     <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>Omnia Asset Management | ${self.title()}</title>
+        <title>OmniaProcure | ${self.title()}</title>
 
         <link rel="stylesheet" type="text/css" media="all" href="/css/main.css"/>
         <script type="text/javascript" src="/js/jquery.js"></script>
@@ -24,7 +24,7 @@
         <div class="container_16">
             <h1 class="alpha omega grid_16">
                 <div id="logo">
-                    <h2>Omnia</h2>
+                    <h2>OmniaProcure</h2>
                 </div>
             </h1>
             ${self.page_content()}
