- Add po_id to fields to be considered when searching for items to be invoiced so as not to have similar items from different POs showing up in invoice/invoice_id/add_item. - Receiving module drops down invoice-able POs to avoid error-checking.

--- a/omnia/templates/receiving.html
+++ b/omnia/templates/receiving.html
@@ -2,6 +2,12 @@
 
 <%def name="custom_js()"><!--{{{-->
     <script src="/js/receiving.js"></script>
+    <script>
+        $(function()    {
+            var obj = new AjaxGet();
+            obj.get("/purchase_order/get_invoiced");
+        });
+    </script>
 </%def><!--}}}-->
 
 <%def name="actionlinks()"></%def>
@@ -14,8 +20,10 @@
             <fieldset>
                 <ol>
                     <li>
-                        <label for="PO-no">Enter Purchase Order No.</label>
-                        <input id="PO-no" name="PO-no"/>
+                        <label for="PO-no">Purchase Order No.</label>
+                        <select id="PO-no" name="PO-no">
+                            <option value="">--Select--</option>
+                        </select>
                     </li>
                 </ol>
             </fieldset>
