--- a/omnia/templates/create_requisition.html
+++ b/omnia/templates/create_requisition.html
@@ -55,6 +55,10 @@
                                 <input id="surname" name="surname"/>
                             </li>
                             <li>
+                                <label for="email">Email</label>
+                                <input id="email" name="email"/>
+                            </li>
+                            <li>
                                 <label for="phone-number">Phone Number</label>
                                 <input id="phone-number" name="phone-number"/>
                             </li>
