--- a/omnia/templates/approve.html
+++ b/omnia/templates/approve.html
@@ -6,6 +6,7 @@
     <script src="/js/req.js"></script>
     <script>
         $(function()    {
+            $(".grid_4 .widget ul").html(role["${session['user'].roles}"]);
 
             var obj = new AjaxGet();
 
@@ -14,10 +15,6 @@
 
         });
     </script>
-</%def>
-
-<%def name="menu()">
-    <%include file="menu.html"/>
 </%def>
 
 <%def name="activity()">
