--- a/omnia/templates/create_requisition.html
+++ b/omnia/templates/create_requisition.html
@@ -6,6 +6,8 @@
     <script src="/js/req.js"></script>
     <script>
         $(function()    {
+            $(".grid_4 .widget ul").html(role["${session['user'].roles}"]);
+
             var obj = new AjaxGet();
 
             obj.get("/misc/get_days");
@@ -13,10 +15,6 @@
             obj.get("/misc/get_years");
         });
     </script>
-</%def>
-
-<%def name="menu()">
-    <%include file="menu.html"/>
 </%def>
 
 <%def name="activity()">
