--- a/omnia/templates/requisitions.html
+++ b/omnia/templates/requisitions.html
@@ -6,15 +6,13 @@
     <script src="/js/req.js"></script>
     <script>
         $(function()    {
+            $(".grid_4 .widget ul").html(role["${session['user'].roles}"]);
+
             var obj = new AjaxGet();
             obj.get("/requisition/get");
         });
 
     </script>
-</%def>
-
-<%def name="menu()">
-    <%include file="menu.html"/>
 </%def>
 
 <%def name="activity()">
