--- a/omnia/templates/add_line_item.html
+++ b/omnia/templates/add_line_item.html
@@ -6,6 +6,8 @@
     <script src="/js/req.js"></script>
     <script><!--{{{-->
         $(function()    {
+            $(".grid_4 .widget ul").html(role["${session['user'].roles}"]);
+
             var obj = new AjaxGet();
             obj.get("/item/get_types");
 
