--- a/omnia/templates/add_po_line_item.html
+++ b/omnia/templates/add_po_line_item.html
@@ -6,6 +6,8 @@
     <script src="/js/purchase_order.js"></script>
     <script>
         $(function()    {
+            $(".grid_4 .widget ul").html(role["${session['user'].roles}"]);
+
             obj = new AjaxGet();
             obj.get("/purchase_order/${c.po_id}/get_by_id");
 
