--- a/omnia/templates/requisition.html
+++ b/omnia/templates/requisition.html
@@ -7,6 +7,7 @@
     <script><!--{{{-->
 
         $(function()    {
+            $(".grid_4 .widget ul").html(role["${session['user'].roles}"]);
 
             var obj = new AjaxGet();
             obj.get("/requisition/${c.req_id}/get_by_id");
