Finally, I got the appropriate data structure for warehouse items This is the most tasking milestone so far.

--- a/omnia/public/css/main.css
+++ b/omnia/public/css/main.css
@@ -9,6 +9,7 @@
 @import url("purchase_order.css");
 @import url("invoice.css");
 @import url("receiving.css");
+@import url("warehouse.css");
 
 body    {
     color: #333;
