--- a/omnia/templates/requisitions.html
+++ b/omnia/templates/requisitions.html
@@ -2,7 +2,7 @@
 
 <%def name="title()">All Requisitions</%def>
 
-<%def name="custom_js()">
+<%def name="custom_js()"><!--{{{-->
     <script src="/js/req.js"></script>
     <script>
         $(function()    {
@@ -13,11 +13,10 @@
         });
 
     </script>
-</%def>
+</%def><!--}}}-->
 
-<%def name="activity()">
+<%def name="activity()"><!--{{{-->
     <div class="grid_12 omega main">
-
         <div class="widget">
             <h4>All Requisitions</h4>
             <div class="inner">
@@ -36,4 +35,4 @@
             </div>
         </div>
     </div>
-</%def>
+</%def><!--}}}-->
