--- a/omnia/templates/dashboard.html
+++ b/omnia/templates/dashboard.html
@@ -31,6 +31,6 @@
     </div>
     ${self.activity()}
     <div id="footer" class="grid_16 alpha omega">
-        <p>&copy;2009. OmniaWorks. All rights reserved.</p>
+        <p>&copy;2009. Omnia Consulting LLC. All rights reserved.</p>
     </div>
 </%def>
